# FYP-Bahria

./: .cursorignore  Config.py  README.md  classifier.py  data_splitting.py  evaluation_metrics.py  feature_extraction.py  hello.py  logger.py  preprocessing.py  pyproject.toml  run_pipeline.py  tool_stats.py
Model/: deep_learning.py
utils/: augmentations.py  losses.py
