[project]
name = "fyp-bahria-demo"
version = "0.1.0"
description = "Deep learning in wireless stethoscope-based lung sound analysis"
readme = "README.md"

authors = [
    {name = "Abdul-Hadi-Waseem", email = "shaikhahw54@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.1",
    # Updated to newer version for Python 3.10 compatibility
    "numba>=0.57.0",
    "llvmlite>=0.40.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
    "PyWavelets>=1.4.0",
    "EMD-signal>=1.5.0",
    "psutil>=6.1.0",
]

[project.scripts]
run-pipeline = "run_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "Model/*.py",
    "Data/*",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
